--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 				<h1 class="subtitle">美食</h1>
 			</div>
 			<div class="food-video">
-				<iframe height="560" src="https://www.youtube.com/embed/w0zO0HmExQc" frameborder="0"
+				<iframe height="600px" width="60%" src="https://www.youtube.com/embed/w0zO0HmExQc" frameborder="0"
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 					allowfullscreen></iframe>
 			</div>
