--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 </head>
 
 <body>
+	<div id="fb-root"></div>
+	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v9.0"
+		nonce="x1GwjFH2"></script>
 	<!--Nav-->
 	<header>
 		<div class="logo-container">
@@ -413,6 +416,10 @@
 						allowfullscreen></iframe>
 				</div>
 			</div>
+			<center>
+				<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width=""
+					data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
+			</center>
 		</section>
 		<footer class="footer">
 			<h4 class="copyright">Copyright 2020 - Victor Toupar</h4>
